<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/baseline_login_24"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_pharma"
            android:icon="@drawable/baseline_emoji_nature_24"
            android:title="@string/menu_pharma" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/baseline_quiz_24"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/menu_questions" />



    </group>
</menu>